--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mini Dashboard</title>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Elm-AI User Dashboard Assignment</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
